applications/rustfs/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rustfs
  labels:
    homelab.dohrm.fr/env: dev
    homelab.dohrm.fr/tier: storage
